getting res back from google recognition

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
     "react-native-camera": "^0.10.0",
+    "react-native-fs": "^2.5.1",
     "react-native-image-to-base64": "^0.1.0",
     "react-native-tts": "^1.4.0"
   },
