--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-camera": "^0.10.0",
     "react-native-fs": "^2.5.1",
     "react-native-image-to-base64": "^0.1.0",
-    "react-native-tts": "^1.4.0"
+    "react-native-tts": "^1.4.0",
+    "react-native-vector-icons": "^4.4.0"
   },
   "devDependencies": {
     "babel-jest": "21.0.2",
