--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,15 +135,12 @@ android {
 dependencies {
     compile project(':react-native-fs')
     compile project(':react-native-image-to-base64')
-    compile project(':react-native-photo-view')
-    compile project(':react-native-share')
-    compile project(':react-native-linear-gradient')
     compile project(':react-native-vector-icons')
     compile project(':react-native-tts')
     compile project(':react-native-camera')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile "com.facebook.react:react-native:"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
